fixed session overflow in database fixed responsive user-details page fixed duplicated entities on both columns (entities of system vs user entities)

--- a/src/app/dashboard/user-details/user-details.component.css
+++ b/src/app/dashboard/user-details/user-details.component.css
@@ -18,3 +18,16 @@ table {
 .form-control {
     height: 200px;
 }
+
+
+@media (max-width: 991px){
+    .mid-border {
+        border-top: 3px solid rgb(192, 192, 192);
+        border-left: 0px solid rgb(192, 192, 192);
+        padding-top: 10px;
+    }
+
+    .select-buttons {
+        padding-top:0px;
+    }
+}
